--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "anhskohbo/no-captcha": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "stripe/stripe-php": "^10.11",
+        "teampanfu/laravel-hcaptcha": "^1.1",
         "willvincent/laravel-rateable": "^3.1"
     },
     "require-dev": {
